a few updates in Dashboard. New page: Filter data in real time

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -44,9 +44,7 @@
 
 <body onload="onLoad()">
 
-    <div id="wrapper">
-
-              
+    <div id="wrapper">              
        
       <!-- Static navbar -->
       <nav class="navbar navbar-default">
@@ -508,11 +506,11 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h4 class="modal-title">EU ETS Dashboard 0.1</h4>
+            <h4 class="modal-title">EU ETS Dashboard 0.1-beta</h4>
           </div>
           <div class="modal-body">
               <h3>Welcome!</h3>
-              <p>Welcome to the EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team such as auction data and a more meaningful sectors aggregation among others. 
+              <p>Welcome to the EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). 
               </p>
               <p>For more information about the tool please check the <strong>About</strong> section.</p>
               <br>
