making progress on the Dashboard landing page

--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Sandbag EU ETS Dashboard - Filter data</title>
+	<title>Sandbag EU ETS Dashboard - See the big picture</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). " />
 	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet" />
@@ -13,12 +13,12 @@
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content="http://sandbag-climate.githug.io"/>
-	<meta property="og:site_name" content="EU ETS Dashboard"/>
-	<meta property="og:description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). "/>
-	<meta name="twitter:title" content="Sandbag Climate Campaign" />
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="https://twitter.com/sandbagorguk" />
+	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -72,39 +72,29 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Filter data in real time</h2>                    
+					<h2>See the big picture</h2>                    
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
+                <img class="col-md-12 img-responsive" src="images/big_picture_main_image.png" alt="See the main picture">
             </div>
             <br>
             <br>
 			<div class="row">
 				<div class="col-md-12">
 				    <div class="about-inner">
-						<img class="img-responsive" src="images/filter_by_country.png" alt="Filter data by country">
-						<h3>By country</h3>
-						<p>You can easily select an arbitrary set of countries by interacting with the a drop down menu. Two buttons are included allowing the user to directly select or deselect all of the countries available. </p>
+						<img class="img-responsive" src="images/customize_series.png" width="120" alt="Customize the chart">
+						<h3>Customize the chart</h3>
+						<p>The set of series being displayed can be easily customized by using checkboxes, just click on the button 'Filter chart' and a drop down menu will be shown.</p>
 					</div>
 				</div>				
 			</div>
             <div class="row">
 				<div class="col-md-12">
 				    <div class="about-inner">
-						<img class="img-responsive" src="images/filter_by_sector.png" alt="Filter data by sector">
-						<h3>By sector</h3>
-						<p>You can easily select an arbitrary set of sectors by interacting with the a drop down menu. Two buttons are included allowing the user to directly select or deselect all of the countries available. </p>
-					</div>
-				</div>				
-			</div>
-            <div class="row">
-				<div class="col-md-12">
-				    <div class="about-inner">
-						<img src="images/icons/combustion_100.png" width="110" alt="Filter data using our power flag">
-						<h3>Filter data using our 'Power' flag</h3>
-						<p>Use the drop down menu to choose between including, excluding or showing only power installations.
-                        </p>
+						<img class="img-responsive" src="images/icons/aviation_100.png"  width="120" alt="Filter data by sector">
+						<h3>Include/exclude aviation data</h3>
+						<p>You can easily include, exclude or show only aviation data by means of a drop down menu. This gives the possibility to interpret the numbers variation depending on the different scenarios availabel.</p>
 					</div>
 				</div>				
 			</div>
