--- a/explore_trends_dashboard.html
+++ b/explore_trends_dashboard.html
@@ -4,11 +4,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Sandbag EU ETS Dashboard - Filter data</title>
+	<title>Sandbag EU ETS Dashboard - Explore trends</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). " />
 	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet" />
 	<meta name="author" content="Pablo Pareja Tobes" />
+
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -72,14 +73,23 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Filter data in real time</h2>                    
+					<h2>Explore trends</h2>                    
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
+                <img class="col-md-12 img-responsive" src="images/explore_trends_main_image.png" alt="Explore trends">
             </div>
             <br>
             <br>
+            <div class="row">
+				<div class="col-md-12">
+				    <div class="about-inner">
+						<img class="img-responsive" src="images/filter_by_period.png" alt="Filter data by period">
+						<h3>By period</h3>
+						<p>You can easily select an arbitrary period of time by interacting with the a drop down menu. Two buttons are available allowing the user to directly select or deselect all of the years available. </p>
+					</div>
+				</div>				
+			</div>
 			<div class="row">
 				<div class="col-md-12">
 				    <div class="about-inner">
