--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</a>
 				</div>
 				<div class="col-md-6">
-					<a href="#" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_line_chart.png);">
+					<a href="explore_trends_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_line_chart.png);">
 						<div class="desc">
 							<h3>Explore trends</h3>
 							<span>Compare data across time</span>
@@ -99,7 +99,7 @@
 					</a>
 					<div class="row">
 						<div class="col-md-6">
-							<a href="#" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_map1.png);">
+							<a href="map_the_emissions_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_map1.png);">
 								<div class="desc">
 									<h3>Map the Emissions</h3>
 									<span>Navigate through installations to see their emissions</span>
@@ -107,7 +107,7 @@
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="#" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_eu_wide_chart.png);">
+							<a href="./big_picture_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_eu_wide_chart.png);">
 								<div class="desc">
 									<h3>See the big picture</h3>
 									<span>Analyze the system at a EU wide scale</span>
@@ -385,14 +385,14 @@
         });
             
         //---Google Analytics----
-          <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-81304709-2', 'auto');
-          ga('send', 'pageview');
+        ga('create', 'UA-81304709-2', 'auto');
+        ga('send', 'pageview');
 
         //-------------------------------
     }());    
