--- a/map_the_emissions_dashboard.html
+++ b/map_the_emissions_dashboard.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Sandbag EU ETS Dashboard - Filter data</title>
+	<title>Sandbag EU ETS Dashboard - Map the emissions</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). " />
 	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet" />
@@ -13,12 +13,12 @@
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
-	<meta property="og:url" content="http://sandbag-climate.githug.io"/>
-	<meta property="og:site_name" content="EU ETS Dashboard"/>
-	<meta property="og:description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). "/>
-	<meta name="twitter:title" content="Sandbag Climate Campaign" />
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="https://twitter.com/sandbagorguk" />
+	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -72,38 +72,38 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Filter data in real time</h2>                    
+					<h2>Map the emissions</h2>                    
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
+                <img class="col-md-12 img-responsive" src="images/map_the_emissions_main_image.png" alt="Map the emissions">
             </div>
             <br>
             <br>
 			<div class="row">
 				<div class="col-md-12">
 				    <div class="about-inner">
-						<img class="img-responsive" src="images/filter_by_country.png" alt="Filter data by country">
-						<h3>By country</h3>
-						<p>You can easily select an arbitrary set of countries by interacting with the a drop down menu. Two buttons are included allowing the user to directly select or deselect all of the countries available. </p>
+						<img class="img-responsive" src="images/map_aggregations.png" width="350" alt="Map aggregations">
+						<h3>Aggregations of intallations</h3>
+						<p>Nearby installations emissions are aggregated and displayed as circles which are proportional both in size and color to the value they represent. Hover over them and you will see the specific area they represent. Just click on the circles if you want to zoom into it.</p>
 					</div>
 				</div>				
 			</div>
             <div class="row">
 				<div class="col-md-12">
 				    <div class="about-inner">
-						<img class="img-responsive" src="images/filter_by_sector.png" alt="Filter data by sector">
-						<h3>By sector</h3>
-						<p>You can easily select an arbitrary set of sectors by interacting with the a drop down menu. Two buttons are included allowing the user to directly select or deselect all of the countries available. </p>
+						<img class="img-responsive" src="images/sector_icons.png"  width="350" alt="Filter data by sector">
+						<h3>Sector-specific icons</h3>
+						<p>Installations associated to different sectors can be quickly identifed by just having a look at the map</p>
 					</div>
 				</div>				
 			</div>
             <div class="row">
 				<div class="col-md-12">
 				    <div class="about-inner">
-						<img src="images/icons/combustion_100.png" width="110" alt="Filter data using our power flag">
-						<h3>Filter data using our 'Power' flag</h3>
-						<p>Use the drop down menu to choose between including, excluding or showing only power installations.
+						<img src="images/map_installations_pop_up.png"  width="350" alt="Filter data using our power flag">
+						<h3>Installation data</h3>
+						<p>Click on the map markers in order to open a dialog where the most relevant information for each installation will be displayed.
                         </p>
 					</div>
 				</div>				
