--- a/filter_data_dashboard.html
+++ b/filter_data_dashboard.html
@@ -57,7 +57,7 @@
 	<header id="fh5co-header" role="banner">
 		<div class="container">
 			<div class="header-inner">
-				<h1><a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html">EU ETS Dashboard</a></h1>
+				<h1><a href="http://sandbag-climate.github.io">EU ETS Dashboard</a></h1>
 				<nav role="navigation">
 					<ul class="nav navbar-nav navbar-right" >
                           <a href="https://twitter.com/sandbagorguk" style="color: #0066cc;"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
