adding links to main images in dashboard site

--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -76,7 +76,9 @@
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/big_picture_main_image.png" alt="See the main picture">
+                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=euwide">
+                    <img class="col-md-12 img-responsive" src="images/big_picture_main_image.png" alt="See the main picture">
+                </a>                
             </div>
             <br>
             <br>
