--- a/filter_data_dashboard.html
+++ b/filter_data_dashboard.html
@@ -76,7 +76,9 @@
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
+                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=sectors">
+                    <img class="col-md-12 img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
+                </a>                
             </div>
             <br>
             <br>
