--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<a href="map_the_emissions_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_map1.png);">
 								<div class="desc">
 									<h3>Map the Emissions</h3>
-									<span>Navigate through installations to see their emissions</span>
+									<span>Navigate through installations</span>
 								</div>
 							</a>
 						</div>
