--- a/map_the_emissions_dashboard.html
+++ b/map_the_emissions_dashboard.html
@@ -76,7 +76,9 @@
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/map_the_emissions_main_image.png" alt="Map the emissions">
+                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=map">
+                    <img class="col-md-12 img-responsive" src="images/map_the_emissions_main_image.png" alt="Map the emissions">
+                </a>                
             </div>
             <br>
             <br>
