--- a/explore_trends_dashboard.html
+++ b/explore_trends_dashboard.html
@@ -77,7 +77,9 @@
 				</div>
 			</div>
             <div class="row">
-                <img class="col-md-12 img-responsive" src="images/explore_trends_main_image.png" alt="Explore trends">
+                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=trends">
+                    <img class="col-md-12 img-responsive" src="images/explore_trends_main_image.png" alt="Explore trends">
+                </a>                
             </div>
             <br>
             <br>
