--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<span><i class="fa fa-users"></i></i></span>
 					<h3>100% Open Source</h3>
 					<p><a href="http://www.sandbag.org.uk"><strong>Sandbag</strong></a> has a commitment to Open Source Software. We believe in the benefits of making our tools available to the community for free as part of an effort to fight against Climate Change. The EU ETS Dashboard is released under the <a href="https://www.gnu.org/licenses/agpl-3.0.en.html"><strong>AGPLv3</strong></a> license.
-                    Check <a href="os_technologies.html"><strong>this section</strong></a> for information about the open source libraries used.</p>
+                    Check <a href="os_technologies_dashboard.html"><strong>this section</strong></a> for information about the open source libraries used.</p>
 				</div>
 				<div class="col-md-4 services-inner text-center">
 					<span><i class="fa fa-recycle"></i></span>
