--- a/os_technologies_dashboard.html
+++ b/os_technologies_dashboard.html
@@ -76,11 +76,12 @@
 					<h2>Open Source technologies/libraries used</h2>                    
 				</div>
 			</div>
-            <div class="row"> 
+            <!-- <div class="row"> 
                 <div class="col-md-2"></div>
                 <img class="col-md-8 img-responsive" src="images/os_technologies_main_image.png" alt="Open Source technologies">
                 <div class="col-md-"></div>
             </div>
+            -->
             <br>
             <br>
             <div class="row">
