--- a/filter_data_dashboard.html
+++ b/filter_data_dashboard.html
@@ -62,6 +62,7 @@
 					<ul class="nav navbar-nav navbar-right" >
                           <a href="https://twitter.com/sandbagorguk" style="color: #0066cc;"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
                           <a href="https://github.com/sandbag-climate/sandbag-climate.github.io" style="color: #0066cc;"><i class="fa fa-github fa-lg fa-fw"></i></a>
+                          <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=contact" title="Contact us" style="color: #0066cc;"><i class="fa fa-envelope fa-md fa-fw"></i></a>
                           <a href="http://www.sandbag.org.uk"><img src="images/sandbag_logo_small.png"/></a>
                     </ul> 
 				</nav>
