--- a/explore_trends_dashboard.html
+++ b/explore_trends_dashboard.html
@@ -128,7 +128,7 @@
         <div class="container">		
 			
 			<div class="col-md-12 fh5co-copyright text-center">
-                <p>&copy; 2016 Sandbag Climate Campaign.<span>Page based on Free HTML5 template by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
+                <p>&copy; 2016 Sandbag Climate Campaign. <span>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></span> <span>Page based on Free HTML5 template by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
 			</div>
 			
 		</div>
