adding a few keywords to pages

--- a/explore_trends_dashboard.html
+++ b/explore_trends_dashboard.html
@@ -7,7 +7,7 @@
 	<title>Sandbag EU ETS Dashboard - Explore trends</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). " />
-	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet" />
+	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet, emissions trading system, ets, open source, agpl" />
 	<meta name="author" content="Pablo Pareja Tobes" />
 
 
