--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -7,7 +7,7 @@
 	<title>Sandbag EU ETS Dashboard - See the big picture</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="EU ETS Dashboard, a tool that provides a user-friendly access to emission trading data extracted from the European Union Transaction Log (EUTL) together with other data integrated by Sandbag's team (e.g. auction data and a more meaningful sectors aggregation). " />
-	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet" />
+	<meta name="keywords" content="climate change, sandbag, d3.js, data visualization, html5, css3, interactive , responsive, interactive, dimple.js, leaflet, emissions trading system, ets, open source, agpl" />
 	<meta name="author" content="Pablo Pareja Tobes" />
 
   	<!-- Facebook and Twitter integration -->
@@ -109,7 +109,7 @@
 			
 			<div class="col-md-12 fh5co-copyright text-center">
                 <p>&copy; 2016 Sandbag Climate Campaign. <span>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></span> <span>Page based on Free HTML5 template by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
-			</div>
+            </div>
 			
 		</div>
 	</footer>
